--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -242,7 +242,7 @@
 .post-content figure > figcaption {
     color: var(--primary);
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 600;
     margin: 8px 0 16px;
 }
 
