--- a/themes/PaperMod/assets/css/core/reset.css
+++ b/themes/PaperMod/assets/css/core/reset.css
@@ -24,9 +24,9 @@ h6 {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    line-height: 1.6;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    line-height: 1.8;
     word-break: break-word;
     background: var(--theme);
 }
@@ -52,6 +52,7 @@ h4,
 h5,
 h6 {
     line-height: 1.2;
+    font-weight: 600;
 }
 
 h1,
@@ -115,4 +116,8 @@ textarea:-webkit-autofill {
 img {
     display: block;
     max-width: 100%;
+}
+
+strong {
+    font-weight: 600;
 }
