--- a/themes/PaperMod/assets/css/core/reset.css
+++ b/themes/PaperMod/assets/css/core/reset.css
@@ -24,7 +24,9 @@ h6 {
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Open Sans", serif;
+    font-optical-sizing: auto;
+    font-variation-settings: "wdth" 100;
     font-size: 1rem;
     line-height: 1.8;
     word-break: break-word;
