--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -17,18 +17,16 @@
     --border: rgb(220, 220, 220);
 }
 
-.dark {
-    --theme: rgb(5, 5, 5);
-    --entry: rgb(17, 17, 17);
-    --primary: rgb(240, 240, 240);
-    --secondary: rgb(180, 180, 180);
-    --tertiary: rgb(140, 140, 140);
-    --content: rgb(220, 220, 220);
-    --code-block-bg: rgb(10, 10, 10);
-    --code-bg: rgb(30, 30, 30);
-    --border: rgb(50, 50, 50);
+.dark {--theme: rgb(9, 10, 12);
+    --entry: rgb(26, 26, 31);
+    --primary: rgb(218, 218, 219);
+    --secondary: rgb(155, 156, 157);
+    --tertiary: rgb(65, 66, 68);
+    --content: rgb(196, 196, 197);
+    --code-block-bg: rgb(28, 29, 33);
+    --code-bg: rgb(28, 29, 33);
+    --border: rgb(51, 51, 51);
 }
-
 .list {
     background: var(--code-bg);
 }
