--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -17,7 +17,8 @@
     --border: rgb(220, 220, 220);
 }
 
-.dark {--theme: rgb(9, 10, 12);
+.dark {
+    --theme: rgb(9, 10, 12);
     --entry: rgb(26, 26, 31);
     --primary: rgb(218, 218, 219);
     --secondary: rgb(155, 156, 157);
