feat: add prompts for ielts speaking

--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -130,7 +130,12 @@
 }
 
 .post-content table {
+    display: block;
     margin-bottom: var(--content-gap);
+}
+
+.post-content table:not(.highlighttable, .highlight table, .gist .highlight) {
+    display: table;
 }
 
 .post-content table th,
