--- a/themes/PaperMod/assets/css/common/post-entry.css
+++ b/themes/PaperMod/assets/css/common/post-entry.css
@@ -54,6 +54,12 @@
 .entry-header h2 {
     font-size: 24px;
     line-height: 1.3;
+    text-align: left;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
 }
 
 .entry-content {
@@ -61,10 +67,12 @@
     color: var(--secondary);
     font-size: 14px;
     line-height: 1.6;
+    text-align: left;
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
 }
 
 .entry-footer {
