--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -6,6 +6,7 @@
 .post-title {
     margin-bottom: 2px;
     font-size: 40px;
+    text-align: left;
 }
 
 .post-description {
@@ -258,7 +259,7 @@
 }
 
 .toc {
-    margin: 0 2px 40px 2px;
+    margin: 0 2px 30px 2px;
     border: 1px solid var(--border);
     background: var(--code-bg);
     border-radius: var(--radius);
@@ -292,6 +293,20 @@
 
 .toc li ul {
     margin-inline-start: var(--gap);
+}
+
+.toc ul {
+    list-style: none;
+}
+
+.toc li {
+    margin: 0;
+}
+
+.toc a {
+    color: var(--secondary);
+    font-size: 14px;
+    text-decoration: none;
 }
 
 .toc summary:focus {
