--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -23,9 +23,11 @@
     --primary: rgb(218, 218, 219);
     --secondary: rgb(155, 156, 157);
     --tertiary: rgb(65, 66, 68);
-    --content: rgb(196, 196, 197);
-    --code-block-bg: rgb(28, 29, 33);
-    --code-bg: rgb(28, 29, 33);
+    --content: rgb(210, 210, 210);
+    /* --code-block-bg: rgb(28, 29, 33); */
+    /* --code-bg: rgb(28, 29, 33); */
+    --code-block-bg: rgb(9, 10, 12);
+    --code-bg: rgb(9, 10, 12);
     --border: rgb(51, 51, 51);
 }
 .list {
