--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -16,7 +16,7 @@
 }
 
 .post-references a {
-    color: #61afef;
+    color: var(--link-color);
     font-size: 16px;
     text-decoration: underline;
     text-underline-offset: 6px;
