--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -15,17 +15,16 @@
     --code-block-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border: rgb(238, 238, 238);
+    --link-color: #61afef;
 }
 
 .dark {
     --theme: rgb(9, 10, 12);
     --entry: rgb(26, 26, 31);
-    --primary: rgb(218, 218, 219);
-    --secondary: rgb(155, 156, 157);
+    --primary: rgb(250, 250, 250);
+    --secondary: rgb(161, 161, 170);
     --tertiary: rgb(65, 66, 68);
-    --content: rgb(210, 210, 210);
-    /* --code-block-bg: rgb(28, 29, 33); */
-    /* --code-bg: rgb(28, 29, 33); */
+    --content: rgb(250, 250, 250);
     --code-block-bg: rgb(9, 10, 12);
     --code-bg: rgb(9, 10, 12);
     --border: rgb(51, 51, 51);
