--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -19,6 +19,9 @@
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
     </span>
+
+    {{- print " · "}}
+    {{- partial "online_indicator.html" . -}}
 </footer>
 {{- end }}
 
