--- a/layouts/partials/post_nav_links.html
+++ b/layouts/partials/post_nav_links.html
@@ -18,14 +18,18 @@ $pages) 1) (in $pages . ) }}
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
             </svg>
-            {{ i18n "prev_page" | default "Previous" }}
+            <span class="nav-label"
+                >{{ i18n "prev_page" | default "Previous" }}</span
+            >
         </span>
         <span>{{ .Name }}</span>
     </a>
     {{- end }} {{- with $pages.Prev . }}
     <a class="next" href="{{ .Permalink }}">
         <span class="title">
-            {{ i18n "next_page" | default "Next" }}
+            <span class="nav-label"
+                >{{ i18n "next_page" | default "Next" }}</span
+            >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="18"
